Fixed title overlapping checkmark - #9
Closes #9

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ img.poster {
 .title {
     font-weight: bold;
     margin:      auto;
+    padding:     0 10%;
 }
 span.stars, span.stars > span {
     display:    inline-block;
